# tbot_by_prod_system

./: main.py  pyproject.toml
app/data/: files_actions.py  list_files.py
app/files/: products.json  reviews.json  sold_products.json
app/forms/: product.py
app/keyboards/: global_menu.py  products.py
app/routers/: products.py  reviews.py  start.py
